@@ -4,6 +4,7 @@ import java.util.*;
 
 import br.edu.ufape.lmts.sementes.controller.dto.request.*;
 import br.edu.ufape.lmts.sementes.enums.Resistencia;
+import br.edu.ufape.lmts.sementes.enums.TipoPergunta;
 import br.edu.ufape.lmts.sementes.facade.Facade;
 import br.edu.ufape.lmts.sementes.repository.*;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -68,25 +69,26 @@ public class UserInitializer implements CommandLineRunner {
 			usuario.setSenha(passwordEncoder.encode("12345678"));
 			usuario.setEndereco(null);
 			usuario.setNomePopular("Junior");
-			usuario.setCpf("333333333");
-			usuario.setContato("87 333333333");
+			usuario.setCpf("444.444.444-44");
+			usuario.setContato("(87)33333-3333");
 			usuario.setDataNascimento(new Date());
-			usuario.setSexo("Macho");
-
+			usuario.setSexo("Masculino");
+			usuario.setTabelaPerguntaUsuario(
+					new TabelaPerguntaUsuario(0, TipoPergunta.PERGUNTA1, passwordEncoder.encode("RESPOSTA 1")));
 			facade.saveUsuario(usuario);
 
 			Admin admin = new Admin();
 			admin.setNome("Admin");
 			admin.setConjuge(null);
-			admin.setContato("AdminContato");
+			admin.setContato("(14)22222-2222");
 			admin.setEmail("admin@admin.com");
-			admin.setCpf("adminCpf");
-			admin.setContato("11 11111-1111");
+			admin.setCpf("555.555.555-55");
 			admin.setEndereco(null);
 			admin.setSexo("admin");
 			admin.setSenha(passwordEncoder.encode("12345678"));
 			admin.setDataNascimento(new Date(18, 10, 2001));
-
+			admin.setTabelaPerguntaUsuario(
+					new TabelaPerguntaUsuario(0, TipoPergunta.PERGUNTA2, passwordEncoder.encode("RESPOSTA 2")));
 			userRepository.save(admin);
 			adminRepository.save(admin);
 
@@ -94,10 +96,9 @@ public class UserInitializer implements CommandLineRunner {
 
 			Gerente gerente = new Gerente();
 			gerente.setNome("Gerente");
-			gerente.setCpf("11111111111");
-			gerente.setContato("14 11111-1111");
+			gerente.setCpf("111.111.111-11");
+			gerente.setContato("(14)11111-1111");
 			gerente.setConjuge(null);
-			gerente.setContato("GerenteContato");
 			gerente.setEmail("gerente@gerente.com");
 			gerente.setEndereco(null);
 			gerente.setSexo("gerente");
@@ -105,7 +106,8 @@ public class UserInitializer implements CommandLineRunner {
 			gerente.setDataNascimento(new Date(18, 10, 2001));
 			gerente.setBancoSementes(banco);
 			gerente.setNomePopular("Seu João");
-
+			gerente.setTabelaPerguntaUsuario(
+					new TabelaPerguntaUsuario(0, TipoPergunta.PERGUNTA1, passwordEncoder.encode("RESPOSTA 1")));
 			userRepository.save(gerente);
 			gerente = gerenteRepository.save(gerente);
 			banco.setGerentes(Collections.singletonList(gerente));
@@ -113,26 +115,25 @@ public class UserInitializer implements CommandLineRunner {
 			Agricultor agricultor = new Agricultor();
 			agricultor.setNome("Agricultor");
 			agricultor.setNomePopular("Seu Zé");
-			agricultor.setCpf("22222222222");
-			agricultor.setContato("AgricultorContato");
+			agricultor.setCpf("222.222.222-22");
+			agricultor.setContato("(87)11111-1111");
 			agricultor.setConjuge(null);
-			agricultor.setContato("12 11111-1111");
 			agricultor.setEmail("agricultor@agricultor.com");
 			agricultor.setEndereco(null);
 			agricultor.setSexo("agricultor");
 			agricultor.setSenha(passwordEncoder.encode("12345678"));
 			agricultor.setDataNascimento(new Date(18, 10, 2001));
-
+			agricultor.setTabelaPerguntaUsuario(
+					new TabelaPerguntaUsuario(0, TipoPergunta.PERGUNTA1, passwordEncoder.encode("RESPOSTA 1")));
 			userRepository.save(agricultor);
 			agricultor.addRole(TipoUsuario.AGRICULTOR);
 			agricultorRepository.save(agricultor);
 
 			Coppabacs coppabacs = new Coppabacs();
 			coppabacs.setNome("Coppabacs");
-			coppabacs.setCpf("33333333333");
-			coppabacs.setContato("13 11111-1111");
+			coppabacs.setCpf("333.333.333-33");
+			coppabacs.setContato("(13)11111-1111");
 			coppabacs.setConjuge(null);
-			coppabacs.setContato("CoppabacsContato");
 			coppabacs.setEmail("coppabacs@coppabacs.com");
 			coppabacs.setEndereco(null);
 			coppabacs.setSexo("coppabacs");
@@ -140,7 +141,8 @@ public class UserInitializer implements CommandLineRunner {
 			coppabacs.setDataNascimento(new Date(18, 10, 2001));
 			coppabacs.setCargo("Funcionário");
 			coppabacs.setNomePopular("Seu Marcos");
-
+			coppabacs.setTabelaPerguntaUsuario(
+					new TabelaPerguntaUsuario(0, TipoPergunta.PERGUNTA1, passwordEncoder.encode("RESPOSTA 1")));
 			userRepository.save(coppabacs);
 			coppabacsRepository.save(coppabacs);
 		}
@@ -154,7 +156,8 @@ public class UserInitializer implements CommandLineRunner {
 
 		return new BancoSementesRequest("Banco de Sementes do Alto Sertão", "Comunidade Agrícola Sertaneja", "1997",
 				"Fundado com o objetivo de preservar variedades locais de sementes e promover a agricultura sustentável na região...",
-				"Milho Crioulo, Feijão Macassa, Mandioca Mansa, Sorgo Nativo, Abóbora Seridó", endereco, objetos,0, "Dono","0800", new ArrayList<>());
+				"Milho Crioulo, Feijão Macassa, Mandioca Mansa, Sorgo Nativo, Abóbora Seridó", endereco, objetos, 0,
+				"Dono", "0800", new ArrayList<>());
 	}
 
 	private static List<SementesRequest> prepareAllSementes() {
@@ -170,9 +173,7 @@ public class UserInitializer implements CommandLineRunner {
 						Resistencia.MEDIA, Resistencia.BAIXA, Resistencia.ALTA, Resistencia.MEDIA),
 				new CaracteristicasAgronomicasRequest(210, 5000, 1500, 120.0, 150.0, 800.0, "Oblongo", "Verde",
 						"Marrom Escuro", "Verde Claro", "Branca", "Erecto", new EmpalhamentoRequest("Parcial")),
-				List.of(new FinalidadeRequest("Produção de café gourmet")),
-				Arrays.asList(new RegioesAdaptacaoCultivoRequest("Sul de Minas Gerais"),
-						new RegioesAdaptacaoCultivoRequest("Cerrado Mineiro")),
+				List.of(new FinalidadeRequest("Produção de café gourmet")), "Sul de Minas Gerais",
 				new CulturaRequest("Café", "Coffea"),
 				new ResponsavelTecnicoRequest("João Silva", "123.456.789-00", "002134", "MG")));
 		sementes.add(new SementesRequest(0, "Glycine max", "Soja",
@@ -185,9 +186,7 @@ public class UserInitializer implements CommandLineRunner {
 						Resistencia.ALTA, Resistencia.ALTA, Resistencia.BAIXA, Resistencia.MEDIA),
 				new CaracteristicasAgronomicasRequest(100, 4000, 3000, 300.0, 200.0, 750.0, "Esferico", "Amarelo",
 						"Verde Escuro", "Verde", "Amarela", "Prostrado", new EmpalhamentoRequest("Total")),
-				List.of(new FinalidadeRequest("Produção de óleo e proteína")),
-				Arrays.asList(new RegioesAdaptacaoCultivoRequest("Mato Grosso do Sul"),
-						new RegioesAdaptacaoCultivoRequest("Paraná")),
+				List.of(new FinalidadeRequest("Produção de óleo e proteína")), "Paraná",
 				new CulturaRequest("Soja", "Glycine max"),
 				new ResponsavelTecnicoRequest("Maria Pereira", "987.654.321-00", "001234", "PR")));
 		sementes.add(new SementesRequest(0, "Zea mays", "Milho",
@@ -199,9 +198,7 @@ public class UserInitializer implements CommandLineRunner {
 						Resistencia.ALTA, Resistencia.MEDIA, Resistencia.MEDIA, Resistencia.ALTA),
 				new CaracteristicasAgronomicasRequest(150, 6000, 5000, 250.0, 300.0, 850.0, "Cilíndrico", "Amarelo",
 						"Marrom Claro", "Amarelo Claro", "Laranja", "Vertical", new EmpalhamentoRequest("Moderado")),
-				List.of(new FinalidadeRequest("Produção de grãos e etanol")),
-				Arrays.asList(new RegioesAdaptacaoCultivoRequest("Rio Grande do Sul"),
-						new RegioesAdaptacaoCultivoRequest("São Paulo")),
+				List.of(new FinalidadeRequest("Produção de grãos e etanol")), "São Paulo",
 				new CulturaRequest("Milho", "Zea mays"),
 				new ResponsavelTecnicoRequest("Carlos Neto", "222.333.444-55", "005678", "SP")));
 
